# ufc-analitycs

./: .env.example  .gitignore  AGENTS.md  Makefile  alembic.ini  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: c62506a8b256_initial_schema.py  f3d1bfc5aa70_bout_features_derived_cache.py  ff6591f2d146_m5_splits_contexto_e_bout_fighter_rounds.py
analysis/: dataset.py  metrics.py  model.py  predict.py  train.py
apps/: __init__.py
apps/bouts/: __init__.py  api.py  enums.py  models.py  schemas.py  selectors.py
apps/bouts/tests/: __init__.py  factories.py  test_api.py  test_selectors.py
apps/events/: __init__.py  api.py  models.py  schemas.py  selectors.py
apps/events/tests/: test_api.py  test_selectors.py
apps/features/: __init__.py  models.py
apps/features/tests/: __init__.py
apps/fighters/: __init__.py  api.py  enums.py  models.py  schemas.py  selectors.py
apps/fighters/tests/: factories.py  test_api.py  test_selectors.py
apps/predictions/: __init__.py  api.py  schemas.py
apps/predictions/tests/: __init__.py  test_api.py
docs/system-design/adr/: 0001-schema-long-bout-fighters.md
ingestion/: __init__.py  backfill_splits_context.py  entity_resolution.py  incremental.py  normalize.py  seed.py  seed_bouts.py  seed_events.py  seed_fighters.py
ingestion/cito/: __init__.py  backfill_rounds.py  cache.py  client.py  dto.py  matching.py  parsers.py
ingestion/features/: __init__.py  __main__.py  cli.py  long_frame.py  matchup.py  materialize.py  rolling.py  trajectory.py
ingestion/sources/: __init__.py  kaggle.py
mma_analytics/: __init__.py  api_v1.py  app.py  db.py  pagination.py  settings.py  spa.py
tests/: conftest.py  test_migrations.py  test_pagination.py  test_schema.py  test_schema_m5.py
tests/analysis/: test_dataset.py  test_metrics.py  test_model.py  test_predict.py  test_train.py
tests/features/: __init__.py  test_cli.py  test_long_frame.py  test_matchup.py  test_materialize.py  test_rolling.py  test_trajectory.py
tests/ingestion/: __init__.py  test_backfill_splits_context.py  test_cito_backfill_rounds.py  test_cito_budget.py  test_cito_client.py  test_cito_dto.py  test_cito_fighter_client.py  test_cito_parsers.py  test_entity_resolution.py  test_incremental.py  test_incremental_fighters.py  test_matching.py  test_matching_dry_run.py  test_normalize.py  test_seed.py  test_seed_bouts.py  test_seed_bouts_backfill.py  test_seed_events.py  test_seed_fighters.py
tests/ingestion/fixtures/: bout_stats_ufc-319-bout-1.json  bout_stats_ufc-319-bout-2.json  bouts_event_details_sample.csv  bouts_fight_details_sample.csv  cito_bout_stats_sample.json  event_details_sample.csv  event_stats_ufc-319.json  event_stats_ufc-320.json  event_ufc-319.json  fight_details_sample.csv  fighter_aaron-pico.json  fighter_alexander-volkanovski.json  fighter_details_sample.csv  fighter_dricus-du-plessis.json  fighter_khamzat-chimaev.json  fighter_lerone-murphy.json
tests/ingestion/fixtures/seed_sample/: event_details.csv  fight_details.csv  fighter_details.csv
web/: .env.example  .gitignore  .prettierignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx  queryKeys.ts  router.tsx
web/src/api/: client.ts  schema.ts  types.ts
web/src/components/layout/: AppLayout.test.tsx  AppLayout.tsx
web/src/components/ui/: card.tsx  input.tsx  pagination.test.tsx  pagination.tsx
web/src/features/bouts/: BoutDetail.test.tsx  BoutDetail.tsx  BoutStats.tsx  format.test.ts  format.ts  useBout.ts
web/src/features/events/: EventBoutCard.tsx  EventList.tsx  EventPage.test.tsx  (+7 more)
web/src/lib/: format.ts  pagination.test.ts  pagination.ts
web/src/mocks/: bouts.ts  events.ts  fighters.ts  handlers.ts  headToHead.ts  server.ts  strikeSplits.ts
web/src/routes/: HomePage.test.tsx  HomePage.tsx
web/src/test/: renderWithProviders.tsx  setup.ts
(+36 files in other folders)
